add pelt demostration

--- a/extras/PELT_demostracion_DCC.ipynb
+++ b/extras/PELT_demostracion_DCC.ipynb
@@ -65,7 +65,7 @@
     "from datacube.utils.rio import configure_s3_access\n",
     "from dask.distributed import Client\n",
     "\n",
-    "configure_s3_access(aws_unsigned=False, requester_pays=True)"
+    "configure_s3_access(aws_unsigned=False, requester_pays=True)\n"
    ]
   },
   {
